force-app/main/default/objects/Nomination__c/Nomination__c.object-meta.xml
<CustomObject>
    <description>A workplace somebody pointed us at, so a person can reach out kindly and offer this. Holds the workplace name and the door the nomination came through. CONTAINS NOTHING ABOUT WHO ASKED BY DESIGN: no hash, no handle, no link to any other record, because a promise not to tell is strongest when there is nothing to tell.</description>
    <label>Nomination</label>
    <nameField>
        <label>Nomination Number</label>
        <type>AutoNumber</type>
        <displayFormat>NOM-{000000}</displayFormat>
    </nameField>
    <pluralLabel>Nominations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>