force-app/main/default/objects/Nomination__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Where this nomination is in being acted on by a person.</description>
    <inlineHelpText>New until a person reaches out. The workplace decides the rest.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default><label>New</label></value>
            <value><fullName>Reached out</fullName><default>false</default><label>Reached out</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined</label></value>
            <value><fullName>Done</fullName><default>false</default><label>Done</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>