force-app/main/default/objects/Nomination__c/listViews/All_Nominations.listView-meta.xml
<ListView>
    <fullName>All_Nominations</fullName>
    <columns>NAME</columns>
    <columns>Workplace__c</columns>
    <columns>Channel__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All nominations</label>
</ListView>