force-app/main/default/objects/Nomination__c/listViews/Waiting_To_Be_Reached.listView-meta.xml
<ListView>
    <fullName>Waiting_To_Be_Reached</fullName>
    <columns>NAME</columns>
    <columns>Workplace__c</columns>
    <columns>Channel__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Waiting to be reached</label>
</ListView>